# TelegramAPI

./: .gitignore  Dockerfile  README.md  README.txt  k8s-deployment.yaml  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml
cfg/: .template.env  сonfig.py
src/api/: main_service.py
src/api/auth/: jwt_manager.py
src/api/router/: auth_router.py  group_router.py  level_router.py  word_router.py  word_type_router.py
src/dto/: schema.py
src/grpc/: mapping_helper.py
src/grpc/auth_service/: auth_service.py  auth_service_pb2.py  auth_service_pb2_grpc.py  client_auth_manager.py
src/grpc/group_service/: client_group_manager.py  group_service.py  group_service_pb2.py  group_service_pb2_grpc.py
src/grpc/level_service/: client_level_manager.py  level_service.py  level_service_pb2.py  level_service_pb2_grpc.py
src/grpc/user_service/: client_user_manager.py  user_service.py  user_service_pb2.py  user_service_pb2_grpc.py
src/grpc/word_service/: client_word_manager.py  word_service.py  word_service_pb2.py  word_service_pb2_grpc.py
src/grpc/word_type_service/: client_word_type_manager.py  word_type_service.py  word_type_service_pb2.py  word_type_service_pb2_grpc.py
src/log/: logger.py
src/model/: level_enum.py  user_action_enum.py  word_type_enum.py
tests/: conftest.py
tests/src/: test_data_preparation.py
tests/src/api/router/: test_auth_router.py  test_group_router.py  test_level_router.py  test_word_router.py  test_word_type_router.py
tests/src/grpc/auth_service/: test_auth_service.py
tests/src/grpc/group_service/: mock_group_service.py  (+1 more)
(+8 files in other folders)
